fix newlines, add footer, fix wavy-text spacing

--- a/src/styles/components/wavy-text.scss
+++ b/src/styles/components/wavy-text.scss
@@ -1,5 +1,10 @@
 .wavy-text {
+    white-space: nowrap;
+
     &:after {
+        content: " ";
+    }
+    &:before {
         content: " ";
     }
 }
